--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,32 +2,5 @@
   "name": "frontend",
   "version": "1.0.0",
   "type": "module",
-  "packageManager": "bun",
-  "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@tailwindcss/vite": "^4.1.13",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.484.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
-  },
-  "devDependencies": {
-    "@tailwindcss/oxide": "^4.1.13",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.7.0",
-    "lightningcss": "^1.30.2",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.2",
-    "vite": "^6.3.6"
-  },
-  "optionalDependencies": {
-    "rollup": "^4.52.3"
-  }
+  "packageManager": "bun"
 }
