--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "packageManager": "bun",
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
